@@ -4,6 +4,7 @@
 - @logs_calls and @print_calls now provide call signature on return
 - @logs_calls and @print_calls now log errors, optional for @log_calls
 - better call signature stringification for @(log|print)_(calls|errors)
+- fixed i?partition() and i?chunks() with xrange()
 
 0.6.0
 - added izip_values() and izip_dicts()
